--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,16 @@
 numpy
-pymysql
 pyparsing
 ipython
 pandas
 tqdm
+itsdangerous
+flask
+watchdog
 networkx
+pymysql
 pydot
-minio
 matplotlib
 cryptography
 otumat
+minio
 urllib3
